export type Tag =
  | 'armor'
  | 'climbing'
  | 'cold resistance'
  | 'fire resistance'
  | 'fire'
  | 'food'
  | 'hydration'
  | 'insect'
  | 'iron'
  | 'light'
  | 'metal'
  | 'money'
  | 'potion'
  | 'stealth'
  | 'sword'
  | 'water'
  | 'weapon'
  | 'wood'
