---
title: EscAPI Exploration domain
---
classDiagram
  namespace exploration {
    class Adventure {
      name
      events
      resolve(EventResolver) Note
    }

    class AdventureEvent {
      name
      description
      resolve(EventResolver) Note
    }

    class EventResolver {
      <<interface>>
      hasTag() bool
    }

    class Player {
      name
      explore(Adventure) Report
      hasTag(Tag) bool
    }

    class Backpack {
      add(Item)
      hasTag(Tag) bool
    }

    class Item {
      name
      description
      hasTag(Tag) bool
    }

    class Tag {
      <<enumeration>>
      FireResistance
      Blessed
      Injured
    }

    class LogBook {
      write(Report)
      adventureReports(adventure) []Report
      bestReports() []Report
    }

    class Report {
      adventure
      note
      exploredAt
    }

    class Note {
      score
      comment
    }
  }

Adventure --* AdventureEvent

Player --|> EventResolver

Player --* Backpack
Player --* Tag
Backpack --* Item
Item --* Tag
Player --* LogBook
LogBook --* Report
Report --* Note
